added some todos

--- a/TODO
+++ b/TODO
@@ -2,3 +2,7 @@
 []  Proofread
 []  Sort out markdown rendering (italic in titles isn't rendered properly)
 []  Impelement images
+[]  Prune tags
+[]  Work out which tags dictate colour coding (which are top-level categories)
+    - Project / Job / Publication / Talk / etc
+[]  Implement color coding
