--- a/TODO
+++ b/TODO
@@ -11,6 +11,9 @@
 [*]  Add intro panel
 [*]  Scroll to top when a new category is selected
 [*]  Dropdown should update to reflect category selection when a category link is clicked
-[]  Filter dropdown should wrap under name title on narrow screens
+[*]  Filter dropdown should wrap under name title on narrow screens
 []  Tidy up href & window location handling
 []  Add job entries for BBC & preloaded
+[]  Sort out responsive title wrapping
+[]  Add categorgies for creative tech / producer / researcher / team lead
+[]  Implement random
