--- a/TODO
+++ b/TODO
@@ -16,4 +16,6 @@
 []  Add job entries for BBC & preloaded
 []  Sort out responsive title wrapping
 []  Add categorgies for creative tech / producer / researcher / team lead
-[]  Implement random
+[*]  Implement random
+[] Add better images....
+[] Add Design Museum talk
